--- a/src/index.css
+++ b/src/index.css
@@ -24,12 +24,16 @@ body {
   position: relative;
   overflow: hidden;
   width: 100%;
+  height: 100%;
   display: flex;
 }
 
 #ascii {
-  margin: 0 auto;
-  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  white-space: nowrap;
+  transform: translate(-50%, -50%);
 }
 
 #hidden {
